--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --exec babel-node index.js",
+    "start": "babel-node index.js --ignore ./node_modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,22 @@
   "bugs": {
     "url": "https://github.com/Jaswanth1817/game-comm-backend/issues"
   },
-  "homepage": "https://github.com/Jaswanth1817/game-comm-backend#readme"
+  "homepage": "https://github.com/Jaswanth1817/game-comm-backend#readme",
+  "dependencies": {
+    "@babel/node": "^7.16.0",
+    "apollo-server-express": "^3.5.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.13",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0"
+  }
 }
